deploy: 5298bf69d1f13f184ab4fa65b465434272646a17

--- a/preview/dsr-139/angular/components/searchbar/searchbar.component.html
+++ b/preview/dsr-139/angular/components/searchbar/searchbar.component.html
@@ -1,56 +1,37 @@
 <div class="searchbar-container" role="search" [ngClass]="appearance()">
-  <div class="searchbar-wrapper">
-    <div
-      class="text-input-wrapper"
-      [ngClass]="{ focused: isFocused() }"
-      [attr.data-disabled]="disabled()"
-    >
-      <div
-        rteDropdown
-        rteDropdownPosition="bottom"
-        [rteDropdownIsOpen]="isOpenComputed()"
-        [rteDropdownOffset]="DROPDOWN_OFFSET"
-        [rteDropdownWidth]="textInputWidth()"
-        [rteDropdownAutofocus]="false"
-        [attr.data-dropdown-id]="dropdownId()"
-        (menuEvent)="onMenuEvent($event)"
-      >
-        <div class="dropdown-trigger" rteDropdownTrigger>
-          <rte-text-input
-            #textInput
-            placeholder="Rechercher"
-            [id]="id() ?? ''"
-            [label]="label()"
-            [disabled]="disabled()"
-            [value]="internalValue()"
-            [showRightIcon]="showResetButton()"
-            [rightIconAction]="'clean'"
-            [assistiveTextLabel]="assistiveText()"
-            [compactSpacing]="compactSpacing()"
-            [leftIcon]="appearanceConfig().showLeftIcon ? 'search' : null"
-            (valueChange)="handleChange($event)"
-            (rightIconClick)="handleClear()"
-          />
-          @if (appearanceConfig().showSearchButton) {
-            <rte-icon-button
-              name="search"
-              size="m"
-              variant="primary"
-              appearance="filled"
-              ariaLabel="Search"
-              class="search-button"
-              [disabled]="disabled()"
-              [compactSpacing]="compactSpacing()"
-              [ngClass]="{ 'compact-spacing': compactSpacing() }"
-              (click)="handleSearch()"
-            />
-          }
-        </div>
-        @if (dropdownItems().length > 0) {
-          <rte-dropdown-menu [items]="dropdownItems()" />
-        }
-      </div>
-    </div>
+  <div
+    class="text-input-wrapper"
+    [attr.data-disabled]="disabled()"
+  >
+    <rte-text-input
+      rightIconAction="clean"
+      autocomplete="off"
+      [id]="id() ?? ''"
+      [placeholder]="label()"
+      [disabled]="disabled()"
+      [value]="value()"
+      [showRightIcon]="showResetButton()"
+      [assistiveTextLabel]="assistiveText()"
+      [compactSpacing]="compactSpacing()"
+      [leftIcon]="appearanceConfig().showLeftIcon ? 'search' : null"
+      [customStyle]="textInputStyles()"
+      (valueChange)="handleChange($event)"
+      (rightIconClick)="handleClear()"
+    />
+    @if (appearanceConfig().showSearchButton) {
+      <rte-icon-button
+        name="search"
+        size="m"
+        variant="primary"
+        appearance="filled"
+        class="search-button"
+        [ariaLabel]="label()"
+        [disabled]="disabled()"
+        [compactSpacing]="compactSpacing()"
+        [customStyle]="searchButtonStyles()"
+        (click)="handleSearch()"
+      />
+    }
   </div>
 </div>
 
