--- a/preview/dsr-139/angular/components/icon-button/icon-button.component.html
+++ b/preview/dsr-139/angular/components/icon-button/icon-button.component.html
@@ -4,6 +4,7 @@
     class="rte-icon-button {{ variant() }} size-{{ size() }}"
     rteBadge
     [class.compact-spacing]="compactSpacing()"
+    [ngStyle]="customStyle()"
     [disabled]="disabled()"
     [attr.aria-label]="ariaLabel()"
     [attr.aria-labelledby]="ariaLabelledBy()"
@@ -26,6 +27,7 @@
     *ngIf="isValidIconName"
     class="rte-icon-button {{ variant() }} size-{{ size() }}"
     [class.compact-spacing]="compactSpacing()"
+    [ngStyle]="customStyle()"
     [disabled]="disabled()"
     [attr.aria-label]="ariaLabel()"
     [attr.aria-labelledby]="ariaLabelledBy()"
