deploy: e4067a1cc5ad5373c1fb6415c244121b4dfd3ca6

--- a/preview/dsr-139/angular/components/text-input/text-input.component.html
+++ b/preview/dsr-139/angular/components/text-input/text-input.component.html
@@ -73,7 +73,7 @@
             class="right-icon"
             data-testid="right-icon"
             [compactSpacing]="true"
-            [name]="rightIconName() || 'cancel'"
+            [name]="rightIconName()"
             [ariaLabel]="rightIconAriaLabel()"
             (click)="onRightIconClickHandler()"
           />
