--- a/preview/dsr-139/angular/components/dropdown/dropdown-menu/dropdown-menu.component.html
+++ b/preview/dsr-139/angular/components/dropdown/dropdown-menu/dropdown-menu.component.html
@@ -1,4 +1,4 @@
-<div class="rte-dropdown-menu" [style.width]="with() !== undefined ? with() + 'px' : undefined">
+<div class="rte-dropdown-menu" [style.width]="widthStyle()">
   <ul 
     class="rte-dropdown-items"
     role="menu"
