refactor (text input): extract private properties to base class so they are hidden from public api (compactSpacing)

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/searchbar/searchbar.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/searchbar/searchbar.component.html
@@ -3,7 +3,7 @@
     class="text-input-wrapper"
     [attr.data-disabled]="disabled()"
   >
-    <rte-text-input
+    <rte-base-text-input
       rightIconAction="clean"
       autocomplete="off"
       [id]="id() ?? ''"
