--- a/preview/dsr-139/angular/components/searchbar/searchbar.component.html
+++ b/preview/dsr-139/angular/components/searchbar/searchbar.component.html
@@ -3,7 +3,7 @@
     class="text-input-wrapper"
     [attr.data-disabled]="disabled()"
   >
-    <rte-text-input
+    <rte-base-text-input
       rightIconAction="clean"
       autocomplete="off"
       [id]="id() ?? ''"
