refactor (icon button): rename click output signal to clickEvent to avoid collision with native dom element

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button-toggle/icon-button-toggle.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button-toggle/icon-button-toggle.component.html
@@ -8,5 +8,5 @@
   [type]="type()"
   [variant]="variant()"
   [appearance]="isSelected() ? 'filled' : 'outlined'"
-  (click)="onClick($event)"
+  (clickEvent)="onClick($event)"
 />
