--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab.component.html
@@ -17,7 +17,7 @@
         opacity: canScrollBackward() ? '1' : '0',
         'pointer-events': canScrollBackward() ? 'auto' : 'none',
       }"
-      (click)="scrollBackward()"
+      (clickEvent)="scrollBackward()"
     />
     <div
       #tabList
@@ -78,7 +78,7 @@
         opacity: canScrollForward() ? '1' : '0',
         'pointer-events': canScrollForward() ? 'auto' : 'none',
       }"
-      (click)="scrollForward()"
+      (clickEvent)="scrollForward()"
     />
   </div>
   <div
