--- a/packages/angular/projects/ds-rte-lib/src/lib/components/banner/banner.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/banner/banner.component.html
@@ -25,6 +25,11 @@
     {{ actionLabel() }}
   </button>
   <div *ngIf="closable()" class="rte-banner-close-icon">
-    <rte-icon-button name="close" variant="neutral" ariaLabel="close banner" (click)="closeBanner()" />
+    <rte-icon-button
+      name="close"
+      variant="neutral"
+      ariaLabel="close banner"
+      (clickEvent)="closeBanner()"
+    />
   </div>
 </section>
