--- a/packages/angular/projects/ds-rte-lib/src/lib/components/modal/modal.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/modal/modal.component.html
@@ -22,7 +22,7 @@
           class="close-icon"
           variant="neutral"
           [ariaLabel]="'Close modal ' + id()"
-          (click)="onClose()"
+          (clickEvent)="onClose()"
         />
       </div>
       <rte-divider />
