--- a/packages/angular/projects/ds-rte-lib/src/lib/components/searchbar/searchbar.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/searchbar/searchbar.component.html
@@ -29,7 +29,7 @@
         [disabled]="disabled()"
         [compactSpacing]="compactSpacing()"
         [customStyle]="searchButtonStyles()"
-        (click)="handleSearch()"
+        (clickEvent)="handleSearch()"
       />
     }
   </div>
