deploy: 41f42b9d6a926b61d10dd82059a10c335ca68ab7

--- a/preview/dsr-139/angular/components/banner/banner.component.html
+++ b/preview/dsr-139/angular/components/banner/banner.component.html
@@ -29,7 +29,7 @@
       name="close"
       variant="neutral"
       ariaLabel="close banner"
-      (click)="closeBanner()"
+      (clickEvent)="closeBanner()"
     />
   </div>
 </section>
