--- a/preview/dsr-139/angular/components/modal/modal.component.html
+++ b/preview/dsr-139/angular/components/modal/modal.component.html
@@ -29,7 +29,7 @@
           class="close-icon"
           variant="neutral"
           [ariaLabel]="'Close modal ' + id()"
-          (click)="onClose()"
+          (clickEvent)="onClose()"
         />
       </div>
       <rte-divider />
