--- a/preview/dsr-139/angular/components/icon-button-toggle/icon-button-toggle.component.html
+++ b/preview/dsr-139/angular/components/icon-button-toggle/icon-button-toggle.component.html
@@ -8,5 +8,5 @@
   [type]="type()"
   [variant]="variant()"
   [appearance]="isSelected() ? 'filled' : 'outlined'"
-  (click)="onClick($event)"
+  (clickEvent)="onClick($event)"
 />
