--- a/preview/dsr-139/angular/components/searchbar/searchbar.component.html
+++ b/preview/dsr-139/angular/components/searchbar/searchbar.component.html
@@ -29,7 +29,7 @@
         [disabled]="disabled()"
         [compactSpacing]="compactSpacing()"
         [customStyle]="searchButtonStyles()"
-        (click)="handleSearch()"
+        (clickEvent)="handleSearch()"
       />
     }
   </div>
