--- a/preview/dsr-139/angular/components/tab/tab.component.html
+++ b/preview/dsr-139/angular/components/tab/tab.component.html
@@ -24,7 +24,7 @@
         opacity: canScrollBackward() ? '1' : '0',
         'pointer-events': canScrollBackward() ? 'auto' : 'none',
       }"
-      (click)="scrollBackward()"
+      (clickEvent)="scrollBackward()"
     />
     <div
       #tabList
@@ -80,7 +80,7 @@
         opacity: canScrollForward() ? '1' : '0',
         'pointer-events': canScrollForward() ? 'auto' : 'none',
       }"
-      (click)="scrollForward()"
+      (clickEvent)="scrollForward()"
     />
   </div>
   <div
