--- a/preview/dsr-139/angular/components/text-input/base-text-input/base-text-input.component.html
+++ b/preview/dsr-139/angular/components/text-input/base-text-input/base-text-input.component.html
@@ -75,7 +75,7 @@
             [compactSpacing]="true"
             [name]="rightIconName()"
             [ariaLabel]="rightIconAriaLabel()"
-            (click)="onRightIconClickHandler()"
+            (clickEvent)="onRightIconClickHandler()"
           />
         </ng-container>
       </div>
