--- a/preview/dsr-139/angular/components/toast/toast.component.html
+++ b/preview/dsr-139/angular/components/toast/toast.component.html
@@ -39,7 +39,7 @@
       name="close"
       [attr.data-testid]="'toast-close-button'"
       [variant]="type() === 'neutral' ? 'reverse' : 'neutral'"
-      (click)="clickCloseButton()"
+      (clickEvent)="clickCloseButton()"
     />
   }
 </div>
