fix (text input): add missing output signals after base-text-input refactor

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/text-input.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/text-input.component.html
@@ -23,4 +23,6 @@
   [ariaLabelledby]="ariaLabelledby()"
   [customStyle]="customStyle()"
   [autocomplete]="autocomplete()"
+  (valueChange)="valueChange.emit($event)"
+  (rightIconClick)="rightIconClick.emit()"
 />
