--- a/packages/angular/projects/ds-rte-lib/src/lib/components/select/select.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/select/select.component.html
@@ -41,7 +41,7 @@
     rteDropdown
     [rteDropdownId]="'dropdown_select_' + id()"
     [rteDropdownPosition]="dropdownPosition()"
-    [rteDropdownOffset]="10"
+    [rteDropdownOffset]="selectDropdownOffset"
     [rteDroprownTriggerToggle]="true"
     [rteDropdownWidth]="selectWidth()"
     (menuEvent)="handleOnClickItem($event.id)"
@@ -62,11 +62,16 @@
       [attr.aria-labelledby]="labelId()"
       [attr.aria-expanded]="isActive()"
       [attr.data-active]="isActive()"
+      [ngStyle]="{ width: computedWidth() }"
       (dropdownTriggered)="handleOnClickTrigger()"
       (dropdownKeyDown)="handleOnKeyDownTrigger($event)"
     >
       <div class="rte-select-content">
-        <rte-icon *ngIf="isError()" name="error" class="error-icon" />
+        <rte-icon
+          *ngIf="shouldDisplayErrorIcon()"
+          name="error"
+          class="error-icon"
+        />
         <div class="rte-select-value">
           <span>{{ currentOptionLabel() }}</span>
         </div>
@@ -79,42 +84,22 @@
             [disabled]="disabled()"
             (click)="handleOnClickClearButton($event)"
           />
-          <rte-icon-button
-            name="arrow-chevron-down"
+          <rte-icon
             variant="neutral"
-            class="rte-select-icon-button trigger-icon"
-            [disabled]="disabled()"
-            (click)="handleOnClickTrigger()"
+            class="trigger-icon"
+            [name]="isActive() ? 'arrow-chevron-up' : 'arrow-chevron-down'"
           />
         </div>
       </div>
     </div>
     <rte-dropdown-menu [items]="formattedOptions()" />
-  </div>
-
-  <rte-link
-    *ngIf="isAssistiveTextLinkVisible()"
-    class="assistive-text-link"
-    [externalLink]="true"
-    [href]="assistiveTextLink() || ''"
-    [label]="assistiveTextLabel() || ''"
-  >
-  </rte-link>
-  <div
-    *ngIf="assistiveTextAppearance() !== 'link'"
-    class="assistive-text {{ assistiveTextAppearance() }}"
-    [ngClass]="{ disabled: disabled() }"
-  >
-    <rte-icon
-      *ngIf="assistiveTextAppearance() === 'error'"
-      name="error"
-      [size]="assistiveTextIconSize"
-    ></rte-icon>
-    <rte-icon
-      *ngIf="assistiveTextAppearance() === 'success'"
-      name="check-circle"
-      [size]="assistiveTextIconSize"
-    ></rte-icon>
-    <span>{{ assistiveTextLabel() }}</span>
+    <rte-assistive-text
+      *ngIf="assistiveTextLabel()"
+      [label]="assistiveTextLabel()"
+      [appearance]="isError() ? 'error' : assistiveTextAppearance()!"
+      [showIcon]="showAssistiveIcon()"
+      [href]="assistiveTextLink()"
+      [width]="width()"
+    />
   </div>
 </div>
