--- a/packages/react/src/components/select/Select.module.scss
+++ b/packages/react/src/components/select/Select.module.scss
@@ -22,10 +22,15 @@
   }
 
   .select-label {
-    color: var(--content-secondary);
+    @include typography-text-m;
     display: flex;
     padding: $positive-spacing_025 $positive-spacing_100;
-    align-items: center;
+    color: var(--content-secondary);
+    max-width: 300px;
+    justify-content: space-between;
+    white-space: normal;
+    overflow-wrap: normal;
+    word-break: normal;
 
   }
 
@@ -33,7 +38,6 @@
     @include elevation-neutral-inner-shadow;
     display: flex;
     min-width: 112px;
-    max-width: 280px;
     min-height: 32px;
     max-height: 32px;
     align-items: center;
@@ -41,6 +45,10 @@
     border-radius: $radius-s;
     border: $width-xs solid var(--border-secondary);
     box-sizing: border-box;
+
+    .trigger-icon {
+      color: var(--content-tertiary);
+    }
 
     &:hover {
       border-color: var(--border-primary);
@@ -57,18 +65,46 @@
       border-color: var(--border-danger);
       outline: 1px solid var(--border-danger);
 
+      &[data-disabled="true"] {
+        color: var(--content-disabled);
+        border-color: var(--border-danger);
+        outline: 1px solid var(--border-danger);
+
+        &:hover {
+          border-color: var(--border-danger);
+        }
+      }
+
+      &[data-read-only="true"] {
+        color: var(--content-tertiary);
+        border-color: var(--border-danger);
+        outline: 1px solid var(--border-danger);
+
+        &:hover {
+          cursor: default;
+          border-color: var(--border-danger);
+        }
+
+        .select-content {
+          .select-value {
+            color: var(--content-tertiary);
+          }
+        }
+      }
+
       &:hover {
         border-color: var(--border-danger);
       }
 
-      &:focus-visible {
-        border-color: var(--border-danger);
-        outline: 1px solid var(--border-danger);
+      .select-content {
+        .select-value {
+          color: var(--content-secondary);
+        }
       }
     }
 
+
     &[data-disabled="true"] {
-      color: var(--content-disabled);
       background-color: var(--background-disabled);
       border-color: var(--border-disabled);
       outline: none;
@@ -79,7 +115,13 @@
       }
 
       .trigger-icon {
-        pointer-events: none;
+        color: var(--content-disabled);
+      }
+
+      .select-content {
+        .select-value {
+          color: var(--content-disabled);
+        }
       }
     }
 
@@ -91,11 +133,16 @@
 
       &:hover {
         cursor: default;
-        border-color: var(--border-tertiary);
       }
 
       .trigger-icon {
-        pointer-events: none;
+        color: var(--content-tertiary);
+      }
+
+      .select-content {
+        .select-value {
+          color: var(--content-tertiary);
+        }
       }
     }
 
@@ -112,10 +159,20 @@
       }
 
       .select-value {
+        @include typography-text-m;
         display: flex;
         padding: 0 $positive-spacing_100;
         align-items: center;
         flex: 1 0 0;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        color: var(--content-primary);
+
+        span {
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
+        }
       }
 
       .select-right-icons {
