--- a/preview/dsr-139/angular/components/text-input/text-input.component.html
+++ b/preview/dsr-139/angular/components/text-input/text-input.component.html
@@ -23,4 +23,6 @@
   [ariaLabelledby]="ariaLabelledby()"
   [customStyle]="customStyle()"
   [autocomplete]="autocomplete()"
+  (valueChange)="valueChange.emit($event)"
+  (rightIconClick)="rightIconClick.emit()"
 />
