deploy: 266f76d4e8981cba0a551678b9074d8af644ba71

--- a/preview/dsr-152/angular/components/select/select.component.html
+++ b/preview/dsr-152/angular/components/select/select.component.html
@@ -91,30 +91,11 @@
     </div>
     <rte-dropdown-menu [items]="formattedOptions()" />
   </div>
-
-  <rte-link
-    *ngIf="isAssistiveTextLinkVisible()"
-    class="assistive-text-link"
-    [externalLink]="true"
-    [href]="assistiveTextLink() || ''"
-    [label]="assistiveTextLabel() || ''"
-  >
-  </rte-link>
-  <div
-    *ngIf="assistiveTextAppearance() !== 'link'"
-    class="assistive-text {{ assistiveTextAppearance() }}"
-    [ngClass]="{ disabled: disabled() }"
-  >
-    <rte-icon
-      *ngIf="assistiveTextAppearance() === 'error'"
-      name="error"
-      [size]="assistiveTextIconSize"
-    ></rte-icon>
-    <rte-icon
-      *ngIf="assistiveTextAppearance() === 'success'"
-      name="check-circle"
-      [size]="assistiveTextIconSize"
-    ></rte-icon>
-    <span>{{ assistiveTextLabel() }}</span>
-  </div>
+  <rte-assistive-text
+    *ngIf="assistiveTextLabel()"
+    [label]="assistiveTextLabel()"
+    [appearance]="isError() ? 'error' : assistiveTextAppearance()!"
+    [showIcon]="showAssistiveIcon()"
+    [href]="assistiveTextLink()"
+  />
 </div>
