fix (text input): correct placeholder exposition and handling

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/searchbar/searchbar.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/searchbar/searchbar.component.html
@@ -7,7 +7,7 @@
       rightIconAction="clean"
       autocomplete="off"
       [id]="id() ?? ''"
-      [placeholder]="label()"
+      [placeholder]="placeholder()"
       [disabled]="disabled()"
       [value]="value()"
       [showRightIcon]="showResetButton()"
