--- a/packages/react/src/components/textInput/baseTextuInput/BaseTextInput.module.scss
+++ b/packages/react/src/components/textInput/baseTextuInput/BaseTextInput.module.scss
@@ -181,6 +181,10 @@
                         border: $width-xs solid var(--border-danger)
                     }
 
+                    &::placeholder {
+                        color: var(--content-secondary);
+                    }
+
                 }
 
             }
