--- a/preview/dsr-139/angular/components/searchbar/searchbar.component.html
+++ b/preview/dsr-139/angular/components/searchbar/searchbar.component.html
@@ -7,7 +7,7 @@
       rightIconAction="clean"
       autocomplete="off"
       [id]="id() ?? ''"
-      [placeholder]="label()"
+      [placeholder]="placeholder()"
       [disabled]="disabled()"
       [value]="value()"
       [showRightIcon]="showResetButton()"
