--- a/preview/dsr-139/angular/components/text-input/base-text-input/base-text-input.component.scss
+++ b/preview/dsr-139/angular/components/text-input/base-text-input/base-text-input.component.scss
@@ -191,6 +191,10 @@
                         border-color: var(--border-danger)
                     }
 
+                    &::placeholder {
+                        color: var(--content-secondary);
+                    }
+
                 }
 
             }
