--- a/packages/angular/.storybook/template/ThemeSelector/theme-selector.component.html
+++ b/packages/angular/.storybook/template/ThemeSelector/theme-selector.component.html
@@ -11,7 +11,8 @@
   </div>
   <div style="display: flex">
     <rte-icon-button
-      label="Réinitialiser le thème"
+      label="Toggle Theme Mode"
+      data-testid="mode-switcher"
       [name]="iconName()"
       (click)="selectMode(nextMode())"
     />
