fix (searchbar): change component structure so input inner border reacts correctly to focus & assistive text takes all the width of its container

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/searchbar/searchbar.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/searchbar/searchbar.component.html
@@ -2,6 +2,8 @@
   <div
     class="text-input-wrapper"
     [attr.data-disabled]="disabled()"
+    (focusin)="handleFocusIn()"
+    (focusout)="handleFocusOut($event)"
   >
     <rte-base-text-input
       rightIconAction="clean"
@@ -15,23 +17,26 @@
       [compactSpacing]="compactSpacing()"
       [leftIcon]="appearanceConfig().showLeftIcon ? 'search' : null"
       [customStyle]="textInputStyles()"
+      [highlighted]="hasFocusWithin()"
       (valueChange)="handleChange($event)"
       (rightIconClick)="handleClear()"
-    />
-    @if (appearanceConfig().showSearchButton) {
-      <rte-icon-button
-        name="search"
-        size="m"
-        variant="primary"
-        appearance="filled"
-        class="search-button"
-        [ariaLabel]="label()"
-        [disabled]="disabled()"
-        [compactSpacing]="compactSpacing()"
-        [customStyle]="searchButtonStyles()"
-        (clickEvent)="handleSearch()"
-      />
-    }
+    >
+      @if (appearanceConfig().showSearchButton) {
+        <rte-icon-button
+          baseTextInputRightSlot
+          name="search"
+          size="m"
+          variant="primary"
+          appearance="filled"
+          class="search-button"
+          [ariaLabel]="label()"
+          [disabled]="disabled()"
+          [compactSpacing]="compactSpacing()"
+          [customStyle]="searchButtonStyles()"
+          (clickEvent)="handleSearch()"
+        />
+      }
+    </rte-base-text-input>
   </div>
 </div>
 
