--- a/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/base-text-input/base-text-input.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/base-text-input/base-text-input.component.scss
@@ -106,11 +106,17 @@
         align-self: stretch;
 
         .input {
+            display: flex;
+            align-items: center;
+            gap: 0;
+            width: 100%;
+            height: 100%;
 
             .input-bar {
                 position: relative;
                 display: flex;
                 align-items: center;
+                flex: 1;
 
                 &.with-left-icon {
                     .input-field {
@@ -168,9 +174,10 @@
                         border-color: var(--border-primary);
                     }
 
-                    &:focus {
+                    &:focus,
+                    &.highlighted {
                         outline: 1px solid var(--border-brand-default);
-                        border-color: var(--border-brand-default)
+                        border-color: var(--border-brand-default);
                     }
 
                     &:active {
@@ -192,11 +199,18 @@
                     }
 
                     &::placeholder {
-                        color: var(--content-secondary);
+                        color: var(--content-tertiary);
                     }
 
                 }
 
+            }
+
+            .right-slot {
+                display: flex;
+                align-items: center;
+                flex-shrink: 0;
+                position: relative;
             }
         }
 
