deploy: 5de8daa1a21884834915b85181f83c43dde7b8d8

--- a/preview/dsr-139/angular/components/text-input/base-text-input/base-text-input.component.scss
+++ b/preview/dsr-139/angular/components/text-input/base-text-input/base-text-input.component.scss
@@ -199,7 +199,7 @@
                     }
 
                     &::placeholder {
-                        color: var(--content-secondary);
+                        color: var(--content-tertiary);
                     }
 
                 }
