--- a/packages/react/src/components/textInput/baseTextuInput/BaseTextInput.module.scss
+++ b/packages/react/src/components/textInput/baseTextuInput/BaseTextInput.module.scss
@@ -173,10 +173,10 @@
 
                     &:disabled,
                     &[readonly] {
-                        outline: 1px solid var(--border-disabled);
                         border: $width-xs solid var(--border-disabled);
                         background: linear-gradient(0deg, var(--elevation-surface-inner-shadow) 0%, var(--elevation-surface-inner-shadow) 100%), var(--background-disabled);
                         cursor: not-allowed;
+                        box-shadow: none;
                     }
 
                     &[data-error='true'] {
