feat (searchbar): add new placeholder text for disabled input

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-menu/dropdown-menu.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-menu/dropdown-menu.component.scss
@@ -28,5 +28,14 @@
     &.open {
       transition: opacity 150ms ease-in-out;
     }
-  }
+
+    .rte-dropdown-items {
+      width: 100%;
+      padding: $positive-spacing_0;
+      margin: 0;
+  
+      li {
+        list-style: none;
+      }
+    }
 }
