--- a/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/base-text-input/base-text-input.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/base-text-input/base-text-input.component.html
@@ -1,6 +1,6 @@
 <div
-  class="container {{labelPosition()}}"
-  [ngClass]="{'error': error(), 'compact-spacing': compactSpacing()}"
+  class="container {{ labelPosition() }}"
+  [ngClass]="{ error: error(), 'compact-spacing': compactSpacing() }"
   [style.width]="width()"
 >
   <ng-container *ngIf="label()">
@@ -24,33 +24,26 @@
         </ng-container>
       </div>
       <ng-container *ngIf="displayCounter() && labelPosition() === 'top'">
-        <p class="input-counter" data-testid="input-counter">
-          {{ characterCount() }}/{{ maxLength() }}
-        </p>
+        <p class="input-counter" data-testid="input-counter">{{ characterCount() }}/{{ maxLength() }}</p>
       </ng-container>
     </div>
   </ng-container>
 
   <div class="input-container">
-    <div
-      class="input {{labelPosition()}}"
-      [ngClass]="{'disabled': disabled(), 'read-only': readOnly()}"
-    >
-      <div class="input-bar" [ngClass]="{'with-left-icon': displayedLeftIcon(), 'with-right-icon': rightIconAction()}">
+    <div class="input {{ labelPosition() }}" [ngClass]="{ disabled: disabled(), 'read-only': readOnly() }">
+      <div
+        class="input-bar"
+        [ngClass]="{ 'with-left-icon': displayedLeftIcon(), 'with-right-icon': rightIconAction() }"
+      >
         <ng-container *ngIf="displayedLeftIcon()">
-          <rte-icon
-            appearance="outlined"
-            class="left-icon"
-            aria-hidden="true"
-            [name]="displayedLeftIcon()!"
-          />
+          <rte-icon appearance="outlined" class="left-icon" aria-hidden="true" [name]="displayedLeftIcon()!" />
         </ng-container>
 
         <input
           #inputRef
           class="input-field"
           [id]="id()"
-          [ngClass]="{'error': error(), 'highlighted': highlighted()}"
+          [ngClass]="{ error: error(), highlighted: highlighted() }"
           [ngStyle]="customStyle()"
           [attr.aria-label]="ariaLabel()"
           [attr.aria-labelledby]="ariaLabelledby()"
@@ -105,8 +98,6 @@
   </div>
 
   <ng-container *ngIf="displayCounter() && labelPosition() === 'side'">
-    <p class="input-counter" data-testid="input-counter">
-      {{ characterCount() }}/{{ maxLength() }}
-    </p>
+    <p class="input-counter" data-testid="input-counter">{{ characterCount() }}/{{ maxLength() }}</p>
   </ng-container>
 </div>
