feat(core): add Nunito font to serve to react and angular package

--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -7,14 +7,14 @@
   (itemClicked)="handleItemClick($event)"
 >
   <rte-banner
-    type="default"
+    type="info"
     message="This is an info banner"
     [closable]="true"
     title="Info Banner"
     [isOpen]="isInfoBannerVisible()"
   ></rte-banner>
   <rte-banner
-    type="alert"
+    type="error"
     message="This is an alert banner"
     [closable]="true"
     title="Alert Banner"
@@ -100,14 +100,14 @@
       </div>
     </rte-card>
     <rte-banner
-      type="default"
+      type="info"
       message="This is an info banner"
       [closable]="true"
       title="Info Banner"
       [isOpen]="isInfoBannerVisible()"
     ></rte-banner>
     <rte-banner
-      type="alert"
+      type="error"
       message="This is an alert banner"
       [closable]="true"
       title="Alert Banner"
