--- a/packages/angular/.storybook/preview.scss
+++ b/packages/angular/.storybook/preview.scss
@@ -8,3 +8,8 @@
 @include theme-selector('violet', 'dark');
 @include theme-selector('vert_foret');
 @include theme-selector('vert_foret', 'dark');
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
