--- a/packages/react/.storybook/preview.scss
+++ b/packages/react/.storybook/preview.scss
@@ -7,3 +7,8 @@
 @include theme-selector('violet', 'dark');
 @include theme-selector('vert_foret');
 @include theme-selector('vert_foret', 'dark');
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
