feat(assistive-text): add width props

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/assistive-text/assistive-text.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/assistive-text/assistive-text.component.html
@@ -1,4 +1,7 @@
-<div class="rte-assistive-text {{ appearance() }}">
+<div
+  class="rte-assistive-text {{ appearance() }}"
+  [ngStyle]="{ width: widthStyle() }"
+>
   <rte-icon
     *ngIf="showIcon() && iconName()"
     class="assistive-icon-{{ appearance() }}"
