--- a/preview/dsr-152/angular/components/assistive-text/assistive-text.component.html
+++ b/preview/dsr-152/angular/components/assistive-text/assistive-text.component.html
@@ -1,4 +1,7 @@
-<div class="rte-assistive-text {{ appearance() }}">
+<div
+  class="rte-assistive-text {{ appearance() }}"
+  [ngStyle]="{ width: widthStyle() }"
+>
   <rte-icon
     *ngIf="showIcon() && iconName()"
     class="assistive-icon-{{ appearance() }}"
