--- a/test-apps/angular/src/styles.scss
+++ b/test-apps/angular/src/styles.scss
@@ -1,3 +1,4 @@
 @use "@design-system-rte/core/design-tokens/tokens/mixins" as *;
+@use "@design-system-rte/core/design-tokens/fonts" as *;
 
 @include theme-selector('bleu_iceberg', 'light');
