feat(dropdown): add Badge
feat(dropdown): add Badge

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-item/dropdown-item.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-item/dropdown-item.component.html
@@ -18,6 +18,13 @@
       <span *ngSwitchDefault style="flex: 2">{{ item()?.label }}</span>
     </ng-container>
     <div *ngIf="item()?.trailingText">{{ item()?.trailingText }}</div>
+    <rte-badge
+      *ngIf="item()?.showBadge && item()?.badgeCount && item()?.badgeContent === 'number'"
+      [badgeType]="item()?.badgeType!"
+      [badgeContent]="item()?.badgeContent!"
+      [count]="item()?.badgeCount"
+      [simpleBadge]="true"
+    ></rte-badge>
   </li>
   <div *ngIf="item()?.hasSeparator" class="dropdown-divider">
     <rte-divider />
