fix(dropdown): handle icon props in badge

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/badge/badge.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/badge/badge.component.html
@@ -7,7 +7,7 @@
   <rte-icon
     *ngIf="showIcon()"
     class="badge-icon"
-    [name]="icon()"
+    [name]="icon()!"
     [size]="iconSize()!"
   />
   <span *ngIf="showText()" class="badge-text">
