--- a/packages/angular/projects/ds-rte-lib/src/lib/components/breadcrumbs/breadcrumb-item/breadcrumb-item.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/breadcrumbs/breadcrumb-item/breadcrumb-item.component.html
@@ -16,6 +16,14 @@
           {{ item()!.label }}
         </a>
       </div>
+      <rte-badge
+        *ngIf="shouldDisplayBadge()"
+        [count]="item()!.badgeCount"
+        [badgeContent]="item()!.badgeContent!"
+        [icon]="item()!.badgeIcon"
+        [badgeType]="item()!.badgeType!"
+        [simpleBadge]="true"
+      />
     } @else {
       <a
         role="link"
@@ -26,6 +34,14 @@
       >
         {{ item()!.label }}
       </a>
+      <rte-badge
+        *ngIf="shouldDisplayBadge()"
+        [count]="item()!.badgeCount"
+        [badgeContent]="item()!.badgeContent!"
+        [icon]="item()!.badgeIcon"
+        [badgeType]="item()!.badgeType!"
+        [simpleBadge]="true"
+      />
     }
   } @else {
     @if (isEllipsisActive()) {
@@ -43,12 +59,28 @@
           [maxWidth]="breadcrumbItemMaxWidth()"
         />
       </div>
+      <rte-badge
+        *ngIf="shouldDisplayBadge()"
+        [count]="item()!.badgeCount"
+        [badgeContent]="item()!.badgeContent!"
+        [icon]="item()!.badgeIcon"
+        [badgeType]="item()!.badgeType!"
+        [simpleBadge]="true"
+      />
     } @else {
       <rte-link
         [href]="item()!.link"
         [label]="item()!.label"
         [subtle]="true"
         [maxWidth]="breadcrumbItemMaxWidth()"
+      />
+      <rte-badge
+        *ngIf="shouldDisplayBadge()"
+        [count]="item()!.badgeCount"
+        [badgeContent]="item()!.badgeContent!"
+        [icon]="item()!.badgeIcon"
+        [badgeType]="item()!.badgeType!"
+        [simpleBadge]="true"
       />
     }
   }
